# EvoImage

./: .gitignore  Dockerfile  README.md  docker-compose.yml  run-dev-environment.sh
app/: CMakeLists.txt  build.sh
app/src/: main.cpp  types.hpp
